# Vision2PointFilter

./: .gitignore  CMakeLists.txt  README.md  class_to_grayscale_mapping_panoptic.json
config/: deskew_clip_export.yaml  deskew_clip_export_real_GACRT026_1758521322.yaml  deskew_clip_export_real_GACRT026_1758521322_raw_projection_undistort_output.yaml  deskew_clip_export_utm.yaml
docs/: project_technical_solution.md
docs/superpowers/plans/: 2026-04-28-deskew-global-frame-enu-utm.md  2026-04-28-front-wide-calibration-no-undistort.md  2026-04-29-configurable-camera-semantic-projection.md
docs/superpowers/specs/: 2026-04-26-front-wide-projection-design.md  2026-04-27-front-wide-calibration-source-switch-design.md  2026-04-28-deskew-global-frame-enu-utm-design.md  2026-04-28-front-wide-calibration-no-undistort-design.md  2026-04-29-configurable-camera-semantic-projection-design.md  2026-04-29-multi-camera-semantic-projection-design.md  2026-04-29-point-cloud-semantic-label-design.md  2026-04-29-semantic-image-root-auto-discovery-design.md  2026-04-30-raw-image-distortion-support-design.md  2026-05-02-raw-projection-undistort-output-design.md  2026-05-04-point-cloud-classification-field-design.md
scripts/: build.sh  run_deskew_clip.py  run_deskew_clip.sh
src/application/: deskew_clip_export.cc  deskew_clip_export_config.cc  deskew_clip_export_config.h  deskew_global_frame.cc  deskew_global_frame.h
src/common/math/: eigen_related.cc  eigen_related.h  math.h
src/common/time/: time_related.cc  time_related.h
src/common/utils/: file.cc  file.h
src/data_loader/: gac_clip_root_loader.cc  gac_clip_root_loader.h  gac_pcd_point.h  semantic_labeled_point.h
src/pose_parse/: inspvax_asc_parser.cc  inspvax_asc_parser.h
src/projection/: camera_calibration.cc  camera_calibration.h  front_wide_projection_types.h  image_index.cc  image_index.h  point_cloud_classification.cc  point_cloud_classification.h  point_cloud_projector.cc  point_cloud_projector.h  rendered_image_undistorter.cc  rendered_image_undistorter.h  semantic_label_mapping.cc  semantic_label_mapping.h  semantic_point_labeler.cc  semantic_point_labeler.h
tests/application/: deskew_clip_export_config_test.cc  deskew_global_frame_test.cc
tests/data_loader/: semantic_labeled_point_test.cc
tests/projection/: camera_calibration_test.cc  image_index_test.cc  point_cloud_classification_test.cc  point_cloud_projector_test.cc  rendered_image_undistorter_test.cc  semantic_label_mapping_test.cc  semantic_point_labeler_test.cc
